k8s/readiness-demo.yaml
# k8s/readiness-demo.yaml

apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    app: frontend-demo
spec:
  containers:
  - name: server
    image: gcr.io/google-samples/microservices-demo/frontend:v0.8.0
#    command: ["sh", "-c"]
#    args: ["timeout 60s /src/server; sleep 6000"]
    ports:
      - containerPort: 8080
    resources:
      requests:
        cpu: 50m
        memory: 5Mi
      limits:
        cpu: 100m
        memory: 128Mi
    livenessProbe:
      initialDelaySeconds: 10
      httpGet:
        path: "/_healthz"
        port: 8080
    readinessProbe:
      initialDelaySeconds: 10
      httpGet:
        path: "/"
        port: 8080
