k8s/resources-demo.yaml
# k8s/resources-demo.yaml 

apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    app: frontend-demo
spec:
  containers:
  - name: server
    image: gcr.io/google-samples/microservices-demo/frontend:v0.8.0
    ports:
      - containerPort: 8080
    resources:
      requests:
        cpu: 50m
        memory: 5Mi
      limits:
        cpu: 100m
        memory: 128Mi
