k8s/elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: elasticsearch
spec:
 serviceName: elasticsearch-svc
 replicas: 1
 selector:
   matchLabels:
     app: elasticsearch
 template:
   metadata:
     labels:
       app: elasticsearch
   spec:
     # comment-in in case of deploying with non-standard storage class
#     initContainers:
#       - name: permissions-fix
#         image: busybox
#         volumeMounts:
#           - name: elasticsearch-storage
#             mountPath: /usr/share/elasticsearch/data
#         command: [ 'chown' ]
#         args: [ '1000:1000', '/usr/share/elasticsearch/data' ]
     containers:
     - name: elasticsearch
       image: elasticsearch:7.17.16
       volumeMounts:
         - name: elasticsearch-storage
           mountPath: /usr/share/elasticsearch/data
 volumeClaimTemplates:
 - metadata:
     name: elasticsearch-storage
   spec:
     accessModes: [ "ReadWriteOnce" ]
     resources:
       requests:
         storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-svc
spec:
  selector:
    app: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
