k8s/hpa-demo.yaml
# k8s/hpa-demo.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-hpa-demo
spec:
  selector:
    matchLabels:
      app: frontend-hpa-demo
  template:
    metadata:
      labels:
        app: frontend-hpa-demo
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/frontend:v0.8.0
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 80m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-hpa-demo-service
spec:
  selector:
    app: frontend-hpa-demo
  ports:
  - name: http
    port: 80
    targetPort: 8080
