k8s/ingress-demo-bot.yaml
# k8s/ingress-demo.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique-ing
  # rewrite target annotation: https://kubernetes.github.io/ingress-nginx/examples/rewrite/
spec:
  rules:
  - host: alon-bot.atech-bot.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  ingressClassName: nginx
